# LLM-Workshop-Notebooks

./: .gitignore  README.md  pyproject.toml
lesson_notebooks/: Embedding_Notebook.ipynb  Embedding_Notebook_Solutions.ipynb  LLM_Notebook.ipynb  Setup_Notebook.ipynb  embedding_utils.py  finetune_batch.jsonl  llm_utils.py
lesson_notebooks/data/newsposts/: newsposts_science.csv
lesson_notebooks/data/translation/: english_greek_filtered.csv  english_lithunian_filtered.csv
