[tool.poetry]
name = "llm-workshop-notebooks"
version = "0.1.0"
description = ""
authors = ["Oliver Newcombe <revilo678@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
spacy = "3.7.5"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
openai = "^1.58.1"
requests = "^2.32.3"
scikit-learn = "^1.6.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
numpy = "1.26.4"
pandas = "1.5.3"
sentence-transformers = "^3.4.0"
unbabel-comet = "^2.2.4"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
